🚀 [Server] 공통 도움 적용전 백업